--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,13 +21,16 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
-    # Set executable permission for gradlew
     - name: Set executable permission for gradlew
       run: chmod +x ./gradlew
 
-    # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
+    - name: Clear Gradle Cache
+      run: rm -rf ~/.gradle/caches/
+
     - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      uses: gradle/actions/setup-gradle@v4.0.0
+      with:
+        gradle-version: '7.0' # Update to a compatible version
 
     - name: Build with Gradle Wrapper
       run: ./gradlew build
@@ -46,6 +49,5 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
-    # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
