--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4.0.0
       with:
-        gradle-version: '7.0' # Update to a compatible version
+        gradle-version: '8.1' # Use a compatible Gradle version
 
     - name: Build with Gradle Wrapper
       run: ./gradlew build
